--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
     }
   },
   "config": {
-    "prepend-autoloader": false
+    "prepend-autoloader": false,
+    "allow-plugins": {
+      "php-http/discovery": true
+    }
   },
   "require-dev": {
     "phpmd/phpmd": "^2.10",
@@ -16,6 +19,21 @@
     "squizlabs/php_codesniffer": "^3.6"
   },
   "require": {
-    "sentry/sdk": "^3.3"
+    "php": ">=7.1",
+    "sentry/sentry": "^3.22",
+    "php-http/guzzle7-adapter": "^1.0",
+    "nyholm/psr7": "^1.8"
+  },
+  "replace": {
+    "guzzlehttp/promises": "*",
+    "guzzlehttp/psr7": "*",
+    "psr/container": "*",
+    "psr/http-client": "*",
+    "psr/http-factory": "*",
+    "psr/http-message": "*",
+    "psr/log": "*",
+    "symfony/deprecation-contracts": "*",
+    "symfony/polyfill-php73": "*",
+    "symfony/polyfill-php80": "*"
   }
 }
